--- a/xquery-unit-examples/.project
+++ b/xquery-unit-examples/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>xquery-unit-java-examples</name>
+	<name>xquery-unit-examples</name>
 	<comment>MarkLogic XQuery Unit Examples. NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
 	<projects>
 	</projects>
