--- a/xquery-unit-java/pom.xml
+++ b/xquery-unit-java/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.marklogic.ps</groupId>
   <artifactId>xquery-unit</artifactId>
-  <version>0.3</version>
+  <version>0.3.4</version>
   <packaging>jar</packaging>
 
   <name>xquery-unit</name>
@@ -54,6 +54,8 @@
 
   <properties>
     <mavenVersion>2.2.1</mavenVersion>
+    <docbook.source>${basedir}/src/docbkx</docbook.source>
+    <docbook.target>${project.build.directory}/docbkx</docbook.target>
   </properties>
 
   <dependencies>
@@ -62,13 +64,13 @@
       <artifactId>junit</artifactId>
       <version>4.8.1</version>
     </dependency>
-    
+
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>1.5.11</version>
     </dependency>
-    
+
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
@@ -86,12 +88,12 @@
       <artifactId>jdom</artifactId>
       <version>1.1</version>
     </dependency>
-    
+
     <dependency>
       <groupId>jaxen</groupId>
       <artifactId>jaxen</artifactId>
       <version>1.1.1</version>
-    </dependency>    
+    </dependency>
 
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
@@ -102,7 +104,7 @@
     <dependency>
       <groupId>com.marklogic</groupId>
       <artifactId>xcc</artifactId>
-      <version>4.1-4</version>
+      <version>4.1-6</version>
     </dependency>
 
   </dependencies>
@@ -133,24 +135,153 @@
           </configuration>
         </plugin>
         <plugin>
-              <artifactId>maven-assembly-plugin</artifactId>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <configuration>
+            <descriptors>
+              <descriptor>src/main/assembly/distribution.xml</descriptor>
+            </descriptors>
+          </configuration>
+        </plugin>
+        <plugin>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <configuration>
+            <source>1.5</source>
+            <links>
+              <link>http://java.sun.com/j2se/1.5.0/docs/api/</link>
+            </links>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>com.agilejava.docbkx</groupId>
+          <artifactId>docbkx-maven-plugin</artifactId>
+          <version>2.0.7</version>
+          <executions>
+            <execution>
+              <id>produce pdf</id>
+              <goals>
+                <goal>generate-pdf</goal>
+              </goals>
               <configuration>
-                <descriptors>
-                  <descriptor>src/main/assembly/distribution.xml</descriptor>
-                </descriptors>
+                <foCustomization>${docbook.source}/resources/xsl/fopdf.xsl</foCustomization>
+                <imgSrcPath>${docbook.source}/</imgSrcPath>
+                <targetDirectory>${docbook.target}/pdf</targetDirectory>
               </configuration>
-         </plugin>
+              <phase>generate-resources</phase>
+            </execution>
+            <execution>
+              <id>produce single page html</id>
+              <goals>
+                <goal>generate-html</goal>
+              </goals>
+              <configuration>
+                <chunkedOutput>false</chunkedOutput>
+                <htmlCustomization>${docbook.source}/resources/xsl/html.xsl</htmlCustomization>
+                <targetDirectory>${docbook.target}/html-single</targetDirectory>
+                <postProcess>
+                  <copy todir="${docbook.target}/html-single">
+                    <fileset dir="${docbook.source}/resources">
+                      <include name="**/*.css" />
+                      <include name="**/*.png" />
+                      <include name="**/*.gif" />
+                      <include name="**/*.jpg" />
+                    </fileset>
+                  </copy>
+                  <copy todir="${docbook.target}/html-single/images">
+                    <fileset dir="${docbook.source}/reference/images">
+                      <include name="**/*.*" />
+                    </fileset>
+                  </copy>
+                </postProcess>
+              </configuration>
+              <phase>generate-resources</phase>
+            </execution>
+            <execution>
+              <id>produce single page html for blogspot</id>
+              <goals>
+                <goal>generate-html</goal>
+              </goals>
+              <configuration>
+                <chunkedOutput>false</chunkedOutput>
+                <htmlStylesheet>http://www.springfuse.com/blog/docbook/html.css</htmlStylesheet>
+                <imgSrcPath>http://www.springfuse.com/blog/docbook/</imgSrcPath>
+                <htmlCustomization>${docbook.source}/resources/xsl/html-embeded.xsl</htmlCustomization>
+                <targetDirectory>${docbook.target}/html-embeded</targetDirectory>
+              </configuration>
+              <phase>generate-resources</phase>
+            </execution>
+            <execution>
+              <id>produce muti-pages html</id>
+              <goals>
+                <goal>generate-html</goal>
+              </goals>
+              <configuration>
+                <chunkedOutput>true</chunkedOutput>
+                <htmlCustomization>src/docbkx/resources/xsl/html-chunk.xsl</htmlCustomization>
+                <targetDirectory>${docbook.target}/html</targetDirectory>
+                <postProcess>
+                  <copy todir="${docbook.target}/html">
+                    <fileset dir="${docbook.source}/resources">
+                      <include name="**/*.css" />
+                      <include name="**/*.png" />
+                      <include name="**/*.gif" />
+                      <include name="**/*.jpg" />
+                    </fileset>
+                  </copy>
+                  <copy todir="${docbook.target}/html/images">
+                    <fileset dir="${docbook.source}/reference/images">
+                      <include name="**/*.*" />
+                    </fileset>
+                  </copy>
+                </postProcess>
+              </configuration>
+              <phase>generate-resources</phase>
+            </execution>
+          </executions>
+          <dependencies>
+            <dependency>
+              <groupId>org.docbook</groupId>
+              <artifactId>docbook-xml</artifactId>
+              <version>4.4</version>
+              <scope>runtime</scope>
+            </dependency>
+            <!-- image support for pdf production -->
+            <dependency>
+              <groupId>javax.media</groupId>
+              <artifactId>jai-core</artifactId>
+              <version>1.1.3</version>
+              <scope>runtime</scope>
+            </dependency>
+            <dependency>
+              <groupId>javax.media</groupId>
+              <artifactId>jai-codec</artifactId>
+              <version>1.1.3</version>
+              <scope>runtime</scope>
+            </dependency>
+          </dependencies>
+          <configuration>
+            <!-- <includes>index.xml</includes> -->
+            <htmlStylesheet>css/html.css</htmlStylesheet>
+            <xincludeSupported>true</xincludeSupported>
+            <sourceDirectory>${docbook.source}</sourceDirectory>
+            <imgSrcPath>./</imgSrcPath>
+            <!-- use extensions -->
+            <useExtensions>1</useExtensions>
+            <highlightSource>1</highlightSource>
+            <highlightDefaultLanguage></highlightDefaultLanguage>
+            <!-- callouts -->
+            <calloutsExtension>1</calloutsExtension>
+            <entities>
+              <entity>
+                <name>version</name>
+                <value>${version}</value>
+              </entity>
+            </entities>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
-  <reporting>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-plugin-plugin</artifactId>
-        <version>2.2</version>
-      </plugin>
-    </plugins>
-  </reporting>
+
+
 
 </project>
