--- a/xquery-unit-examples/pom.xml
+++ b/xquery-unit-examples/pom.xml
@@ -71,6 +71,7 @@
 			</plugin>
             <plugin>
               <artifactId>maven-assembly-plugin</artifactId>
+              <version>2.2-beta-5</version>
               <configuration>
                 <descriptors>
                   <descriptor>src/main/assembly/distribution.xml</descriptor>
